// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wallet decrypt should decrypt 1`] = `
Immutable.Map {
  "addresses": Immutable.Map {
    "19XmKRY66VnUn5irHAafyoTfiwFuGLUxKF": Immutable.Map {
      "addr": "19XmKRY66VnUn5irHAafyoTfiwFuGLUxKF",
      "priv": "decrypted from [{\\"ciphertext\\":\\"ofuAPRjXETbAPACA7qY/wD9aG/xh5XvyZDSxmfqohDdnbFDKXTV87GFfp/55iTU39wXy63qvQP96bdJOBvlAQg==\\",\\"iterations\\":5000,\\"password\\":\\"secret\\"}]",
      "tag": 0,
      "label": "",
      "created_time": 1492721419269,
      "created_device_name": "javascript_web",
      "created_device_version": "3.0",
    },
    "14mQxLtEagsS8gYsdWJbzthFFuPDqDgtxQ": Immutable.Map {
      "addr": "14mQxLtEagsS8gYsdWJbzthFFuPDqDgtxQ",
      "priv": "decrypted from [{\\"ciphertext\\":\\"4MvCwhdK+VxatwL3bbbsrURdjaFisAdUJFfVHiOeEARCrNv2FEevVYcxidNEAuuGpysQzmPME/yQm59+GF7xzg==\\",\\"iterations\\":5000,\\"password\\":\\"secret\\"}]",
      "tag": 0,
      "label": "labeled_imported",
      "created_time": 1492721432222,
      "created_device_name": "javascript_web",
      "created_device_version": "3.0",
    },
    "1JD73aGSdeqKUjJ4ntP4eCyUiuZ3ogJE1u": Immutable.Map {
      "addr": "1JD73aGSdeqKUjJ4ntP4eCyUiuZ3ogJE1u",
      "priv": "decrypted from [{\\"ciphertext\\":null,\\"iterations\\":5000,\\"password\\":\\"secret\\"}]",
      "tag": 0,
      "label": "",
      "created_time": 1492721461228,
      "created_device_name": "javascript_web",
      "created_device_version": "3.0",
    },
  },
  "tx_notes": Immutable.Map {},
  "guid": "50dae286-e42e-4d67-8419-d5dcc563746c",
  "metadataHDNode": "xprv9tygGQP8be7uzNm5Czuy41juTK9pUKnWyZtDxgbmSEcCYa9VdvvtSknEyiKitqqm2TMv14NjXPQ68XLwSdH6Scc5GwXoZ31yRZZysxhVGU7",
  "tx_names": Immutable.List [],
  "double_encryption": false,
  "address_book": Immutable.Map {},
  "hd_wallets": Immutable.List [
    Immutable.Map {
      "seedHex": "decrypted from [{\\"ciphertext\\":\\"YSxSY3q6gfjrmVoRg8GbJU9gyqFFQxitGEmxBKbmE40av+Daa/WIBQf2yguYlrEKPd5O2fgrJVmw9Otf2iVH5w==\\",\\"iterations\\":5000,\\"password\\":\\"secret\\"}]",
      "passphrase": "",
      "mnemonic_verified": false,
      "default_account_idx": 0,
      "accounts": Immutable.List [
        Immutable.Map {
          "label": "My Bitcoin Wallet",
          "archived": false,
          "xpriv": "decrypted from [{\\"ciphertext\\":\\"G1XRCumvdvM10xN1n9ub2JNyk3PphNhoYGQsVKnFi7tKmaDpQVaBmLX4XTWMkFENIGGmKd4PCxwZr6g1RC6RWJFWyXcAs+17DQdv7ZqdiKkj8p0Td3mEM/Ta41KYyxJdjlrT1FyW4HpH0AGejy4rJI43nHlxjpDl0rldP58eaEE=\\",\\"iterations\\":5000,\\"password\\":\\"secret\\"}]",
          "xpub": "xpub6CKNDRQEZmyHUrFdf1HapGEn27ramwpqxZUMEJYUUokoQrz9yLBAiKjGVWDuiCT39udj1r3whqQN89Tar5KrojH8oqSy7ytzJKW8gwmhwD3",
          "address_labels": Immutable.Map {
            "0": Immutable.Map {
              "index": 0,
              "label": "labeled_address",
            },
          },
          "cache": Immutable.Map {
            "receiveAccount": "xpub6F41z8MqNcJMvKQgAd5QE2QYo32cocYigWp1D8726ykMmaMqvtqLkvuL1NqGuUJvU3aWyJaV2J4V6sD7Pv59J3tYGZdYRSx8gU7EG8ZuPSY",
            "changeAccount": "xpub6F41z8MqNcJMwmeUExdCv7UXvYBEgQB29SWq9jyxuZ7WefmSTWcwXB6NRAJkGCkB3L1Eu4ttzWnPVKZ6REissrQ4i6p8gTi9j5YwDLxmZ8p",
          },
          "index": 0,
        },
      ],
    },
  ],
  "sharedKey": "8a260b2b-5257-4357-ac56-7a7efca323ea",
  "options": Immutable.Map {
    "pbkdf2_iterations": 5000,
    "fee_per_kb": 10000,
    "html5_notifications": false,
    "logout_time": 600000,
  },
}
`;

exports[`Wallet encrypt should encrypt 1`] = `
Immutable.Map {
  "addresses": Immutable.Map {
    "19XmKRY66VnUn5irHAafyoTfiwFuGLUxKF": Immutable.Map {
      "addr": "19XmKRY66VnUn5irHAafyoTfiwFuGLUxKF",
      "priv": "encrypted with {\\"iterations\\":5000,\\"password\\":\\"secret\\",\\"plaintext\\":\\"38W3vsxt246Lhawvz81y2HQVnsJrBUX87jSTUUnixPsE\\"}",
      "tag": 0,
      "label": "",
      "created_time": 1492721419269,
      "created_device_name": "javascript_web",
      "created_device_version": "3.0",
    },
    "14mQxLtEagsS8gYsdWJbzthFFuPDqDgtxQ": Immutable.Map {
      "addr": "14mQxLtEagsS8gYsdWJbzthFFuPDqDgtxQ",
      "priv": "encrypted with {\\"iterations\\":5000,\\"password\\":\\"secret\\",\\"plaintext\\":\\"BpD2ZuJjZ8PJPpDX6ZmsKFsXHkL7XV3dt385zghMfF6C\\"}",
      "tag": 0,
      "label": "labeled_imported",
      "created_time": 1492721432222,
      "created_device_name": "javascript_web",
      "created_device_version": "3.0",
    },
    "1JD73aGSdeqKUjJ4ntP4eCyUiuZ3ogJE1u": Immutable.Map {
      "addr": "1JD73aGSdeqKUjJ4ntP4eCyUiuZ3ogJE1u",
      "priv": "encrypted with {\\"iterations\\":5000,\\"password\\":\\"secret\\",\\"plaintext\\":null}",
      "tag": 0,
      "label": "",
      "created_time": 1492721461228,
      "created_device_name": "javascript_web",
      "created_device_version": "3.0",
    },
  },
  "tx_notes": Immutable.Map {},
  "guid": "50dae286-e42e-4d67-8419-d5dcc563746c",
  "dpasswordhash": "hash of {\\"iterations\\":5000,\\"password\\":\\"secret\\"}",
  "metadataHDNode": "xprv9tygGQP8be7uzNm5Czuy41juTK9pUKnWyZtDxgbmSEcCYa9VdvvtSknEyiKitqqm2TMv14NjXPQ68XLwSdH6Scc5GwXoZ31yRZZysxhVGU7",
  "tx_names": Immutable.List [],
  "double_encryption": true,
  "address_book": Immutable.Map {},
  "hd_wallets": Immutable.List [
    Immutable.Map {
      "seedHex": "encrypted with {\\"iterations\\":5000,\\"password\\":\\"secret\\",\\"plaintext\\":\\"6a4d9524d413fdf69ca1b5664d1d6db0\\"}",
      "passphrase": "",
      "mnemonic_verified": false,
      "default_account_idx": 0,
      "accounts": Immutable.List [
        Immutable.Map {
          "label": "My Bitcoin Wallet",
          "archived": false,
          "xpriv": "encrypted with {\\"iterations\\":5000,\\"password\\":\\"secret\\",\\"plaintext\\":\\"xprv9yL1ousLjQQzGNBAYykaT8J3U626NV6zbLYkRv8rvUDpY4f1RnrvAXQneGXC9UNuNvGXX4j6oHBK5KiV2hKevRxY5ntis212oxjEL11ysuG\\"}",
          "xpub": "xpub6CKNDRQEZmyHUrFdf1HapGEn27ramwpqxZUMEJYUUokoQrz9yLBAiKjGVWDuiCT39udj1r3whqQN89Tar5KrojH8oqSy7ytzJKW8gwmhwD3",
          "address_labels": Immutable.Map {
            "0": Immutable.Map {
              "index": 0,
              "label": "labeled_address",
            },
          },
          "cache": Immutable.Map {
            "receiveAccount": "xpub6F41z8MqNcJMvKQgAd5QE2QYo32cocYigWp1D8726ykMmaMqvtqLkvuL1NqGuUJvU3aWyJaV2J4V6sD7Pv59J3tYGZdYRSx8gU7EG8ZuPSY",
            "changeAccount": "xpub6F41z8MqNcJMwmeUExdCv7UXvYBEgQB29SWq9jyxuZ7WefmSTWcwXB6NRAJkGCkB3L1Eu4ttzWnPVKZ6REissrQ4i6p8gTi9j5YwDLxmZ8p",
          },
          "index": 0,
        },
      ],
    },
  ],
  "sharedKey": "8a260b2b-5257-4357-ac56-7a7efca323ea",
  "options": Immutable.Map {
    "pbkdf2_iterations": 5000,
    "fee_per_kb": 10000,
    "html5_notifications": false,
    "logout_time": 600000,
  },
}
`;
